// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing svg expressions Testing a multi-line svg expression 1`] = `
Array [
  Object {
    "type": "helperPoint",
    "x": 10,
    "y": 80,
  },
  Object {
    "type": "helperPoint",
    "x": 90,
    "y": 100,
  },
]
`;

exports[`Testing svg expressions Testing a one-line svg expression 1`] = `
Array [
  Object {
    "type": "helperPoint",
    "x": 10,
    "y": 80,
  },
]
`;
